<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/IP"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineH10">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineIPV50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.44" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineIPV55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineIPV80"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.69" />

        <EditText
            android:id="@+id/inputIP"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineIPV50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/deuxPoints"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/deux_points"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineIPV55"
            app:layout_constraintStart_toStartOf="@+id/guidelineIPV50"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/inputPort"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineIPV80"
            app:layout_constraintStart_toStartOf="@+id/guidelineIPV55"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSet"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button_layout"
            android:text="@string/set"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineIPV80"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonPanel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineH20"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineButtonH33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineButtonH66"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.66" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineButtonV33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineButtonV66"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.66" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonUp"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/up"
            android:enabled="false"
            app:layout_constraintBottom_toTopOf="@+id/guidelineButtonH33"
            app:layout_constraintEnd_toStartOf="@+id/guidelineButtonV66"
            app:layout_constraintStart_toStartOf="@+id/guidelineButtonV33"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonDown"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/down"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineButtonV66"
            app:layout_constraintStart_toStartOf="@+id/guidelineButtonV33"
            app:layout_constraintTop_toTopOf="@+id/guidelineButtonH66" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLeft"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/left"
            android:enabled="false"
            app:layout_constraintBottom_toTopOf="@+id/guidelineButtonH66"
            app:layout_constraintEnd_toStartOf="@+id/guidelineButtonV33"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelineButtonH33" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRight"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/right"
            android:enabled="false"
            app:layout_constraintBottom_toTopOf="@+id/guidelineButtonH66"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineButtonV66"
            app:layout_constraintTop_toTopOf="@+id/guidelineButtonH33" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonTab"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/tab"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="@id/guidelineH55"
        app:layout_constraintEnd_toStartOf="@id/buttonClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineH45" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonClick"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:enabled="false"
        android:text="@string/click"
        app:layout_constraintBottom_toBottomOf="@id/guidelineH55"
        app:layout_constraintEnd_toStartOf="@+id/buttonBeep"
        app:layout_constraintStart_toEndOf="@id/buttonTab"
        app:layout_constraintTop_toTopOf="@+id/guidelineH45" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonBeep"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:enabled="false"
        android:text="@string/beep"
        app:layout_constraintStart_toEndOf="@id/buttonClick"
        app:layout_constraintBottom_toBottomOf="@id/guidelineH55"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineH45" />

    <View
        android:id="@+id/pad"
        android:background="@color/grey"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_width="300dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineH55" />
</androidx.constraintlayout.widget.ConstraintLayout>